--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,149 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:background="#FFFFFF">
-    <RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
+    <RelativeLayout
+        android:id="@+id/RelativeLayout01"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-        <TextView
-            android:id="@+id/title"
+    <!--
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:gravity="center"
+        android:lineSpacingExtra="12sp"
+        android:padding="10dip"
+        android:text="Color depictor"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="30sp"
+        android:typeface="monospace" />
+    -->
+
+        <TableLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:gravity="center"
-            android:lineSpacingExtra="12sp"
-            android:padding="10dip"
-            android:text="Color depictor"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="30sp"
-            android:typeface="monospace" />
+            android:stretchColumns="0,1" >
 
+            <TableRow>
+                <TextView
+                    android:id="@+id/txt_colorName"
+                    android:text=" COLOR "
+                    android:layout_gravity="center"
+                    android:textColor="@color/black_alpha"
+                    android:textSize="25sp"
+                    />
+            </TableRow>
+
+            <TableRow
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <Button
+                    android:id="@+id/btnColor"
+                    style="@style/PrimaryButton"
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:background="@color/depict_button"
+                    android:fontFamily="monospace"
+                    android:padding="10dip"
+                    android:text="Press the screen to depict color"
+                    android:textAllCaps="false"
+                    android:textColor="@color/black_alpha"
+                    android:textSize="25sp"
+
+                    />
+            </TableRow>
+            <TableRow>
+                <ImageView
+                    android:id="@+id/img_palette"
+                    android:layout_height="60dp"
+                    />
+            </TableRow>
+            <TableRow>
+                <LinearLayout
+                    android:id="@+id/rgb_layout"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="5dip">
+
+                    <TextView
+                        android:id="@+id/txv_sensorTxt"
+                        android:layout_width="117dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginBottom="15dp"
+                        android:padding="5dip"
+                        android:text="RGB:"
+                        android:textColor="@color/black_alpha"
+                        android:textSize="18sp"
+                        android:typeface="monospace" />
+
+                    <TextView
+                        android:id="@+id/txv_rgbValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:padding="5dip"
+                        android:text="Nothing yet!"
+                        android:textColor="@color/black_alpha"
+                        android:textSize="18sp"
+                        android:typeface="monospace" />
+                </LinearLayout>
+
+            </TableRow>
+            <TableRow>
+                <Switch
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:id="@+id/speakerSwitch"
+                    android:padding="5dip"
+                    android:text="Speaker "
+                    android:textColor="@color/black_alpha"
+                    android:textSize="18sp"
+                    android:typeface="monospace"
+                    tools:ignore="UseSwitchCompatOrMaterialXml"
+                     />
+            </TableRow>
+        </TableLayout>
+<!--
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
             android:background="#FFFFFF"
             android:orientation="vertical"
             android:padding="30dip">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/btnColor"
+                style="@android:style/Widget.DeviceDefault.Button.Borderless"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dip">
-
-                <Switch android:id="@+id/speakerSwitch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Speaker "
-                    android:padding="5dip"
-                    android:layout_marginLeft="10dp"
-                    android:textColor="@color/black_alpha"
-                    android:textSize="18sp"
-                    android:typeface="monospace">
-
-                </Switch>
-            </LinearLayout>
+                android:layout_margin="10dp"
+                android:background="@color/activitybutton"
+                android:fontFamily="monospace"
+                android:padding="10dip"
+                android:text=" Depict! "
+                android:textAllCaps="false"
+                android:textColor="@color/black_alpha"
+                android:textSize="25sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="5dip">
+                android:padding="5dip"
+                android:visibility="invisible">
 
                 <TextView
                     android:id="@+id/txv_sensorTxt"
@@ -68,30 +168,34 @@
                     android:textSize="18sp"
                     android:typeface="monospace" />
             </LinearLayout>
-            <!--
-            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="5dip">
-                <TextView android:id="@+id/txv_lightTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="15dp" android:padding="5dip" android:text="Lux value:" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
-                <TextView android:id="@+id/txv_lightValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:padding="5dip" android:text="Nothing yet!" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
-            </LinearLayout>
-            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="5dip">
-                <TextView android:id="@+id/txv_proximityTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="15dp" android:padding="5dip" android:text="Proximity:" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
-                <TextView android:id="@+id/txv_proximityValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:padding="5dip" android:text="Nothing yet!" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
-            </LinearLayout>
-            -->
-            <Button
-                android:id="@+id/btnColor"
-                style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                android:layout_width="fill_parent"
-                android:layout_height="70dip"
-                android:layout_margin="10dp"
-                android:background="@color/activitybutton"
-                android:fontFamily="monospace"
-                android:padding="10dip"
-                android:text=" Depict! "
-                android:textAllCaps="false"
+
+            <Switch
+                android:id="@+id/speakerSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:padding="5dip"
+                android:text="Speaker "
                 android:textColor="@color/black_alpha"
-                android:textSize="25sp" />
+                android:textSize="18sp"
+                android:typeface="monospace"
+                tools:ignore="UseSwitchCompatOrMaterialXml">
+
+            </Switch>
+
         </LinearLayout>
+            -->
+
+            <!--
+        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="5dip">
+            <TextView android:id="@+id/txv_lightTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="15dp" android:padding="5dip" android:text="Lux value:" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
+            <TextView android:id="@+id/txv_lightValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:padding="5dip" android:text="Nothing yet!" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
+        </LinearLayout>
+        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="5dip">
+            <TextView android:id="@+id/txv_proximityTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="15dp" android:padding="5dip" android:text="Proximity:" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
+            <TextView android:id="@+id/txv_proximityValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:padding="5dip" android:text="Nothing yet!" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
+        </LinearLayout>
+        -->
     </RelativeLayout>
 </LinearLayout>
 
