--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Lab3" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Lab3" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -12,5 +12,13 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="PrimaryButton" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:textColor">@color/depict_button</item>
+        <item name="android:background">@color/depict_button</item>
+        <item name="colorPrimary">@color/depict_button</item>
+        <item name="colorPrimaryVariant">@color/depict_button</item>
+        <item name="colorOnPrimary">@color/depict_button</item>
     </style>
 </resources>
