New RGB design + background color settings + changed voice logic

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,10 @@
     <color name="activitybutton">#FFE06E</color>
     <color name="activityfont">#3f3f3f</color>
     <color name="depict_button">#c5c5c5</color>
+    <color name="light_blue_400">#FF29B6F6</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="gray_400">#FFBDBDBD</color>
+    <color name="gray_600">#FF757575</color>
 
 
 </resources>
