--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,20 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-    <!--
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center"
-        android:lineSpacingExtra="12sp"
-        android:padding="10dip"
-        android:text="Color depictor"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp"
-        android:typeface="monospace" />
-    -->
+        <!--
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center"
+            android:lineSpacingExtra="12sp"
+            android:padding="10dip"
+            android:text="Color depictor"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="30sp"
+            android:typeface="monospace" />
+        -->
 
         <TableLayout
             android:layout_width="fill_parent"
@@ -50,14 +50,13 @@
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="1"
-                    android:background="@color/depict_button"
                     android:fontFamily="monospace"
+                    android:drawableRight="@drawable/icon"
                     android:padding="10dip"
-                    android:text="Press the screen to depict color"
+                    android:text="Press the screen to depict the color"
                     android:textAllCaps="false"
                     android:textColor="@color/black_alpha"
                     android:textSize="25sp"
-
                     />
             </TableRow>
             <TableRow>
@@ -75,9 +74,23 @@
                     android:orientation="horizontal"
                     android:padding="5dip">
 
+        <!--
+        <TextView
+            android:id="@+id/txv_sensorTxt"
+            android:layout_width="117dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="15dp"
+            android:padding="5dip"
+            android:text="RGB:"
+            android:textColor="@color/black_alpha"
+            android:textSize="18sp"
+            android:typeface="monospace" />
+        -->
+
                     <TextView
                         android:id="@+id/txv_sensorTxt"
-                        android:layout_width="117dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginBottom="15dp"
@@ -87,115 +100,117 @@
                         android:textSize="18sp"
                         android:typeface="monospace" />
 
+                        <!--
                     <TextView
                         android:id="@+id/txv_rgbValue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="30dp"
+                        android:layout_marginLeft="5dp"
                         android:padding="5dip"
                         android:text="Nothing yet!"
                         android:textColor="@color/black_alpha"
                         android:textSize="18sp"
                         android:typeface="monospace" />
-                </LinearLayout>
+                        -->
+    </LinearLayout>
 
-            </TableRow>
-            <TableRow>
-                <Switch
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:id="@+id/speakerSwitch"
-                    android:padding="5dip"
-                    android:text="Speaker "
-                    android:textColor="@color/black_alpha"
-                    android:textSize="18sp"
-                    android:typeface="monospace"
-                    tools:ignore="UseSwitchCompatOrMaterialXml"
-                     />
-            </TableRow>
-        </TableLayout>
+</TableRow>
+<TableRow>
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:id="@+id/speakerSwitch"
+        android:padding="5dip"
+        android:text="Speaker "
+        android:textColor="@color/black_alpha"
+        android:textSize="18sp"
+        android:typeface="monospace"
+        tools:ignore="UseSwitchCompatOrMaterialXml"
+        />
+</TableRow>
+</TableLayout>
 <!--
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:background="#FFFFFF"
+        android:orientation="vertical"
+        android:padding="30dip">
+
+        <Button
+            android:id="@+id/btnColor"
+            style="@android:style/Widget.DeviceDefault.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@color/activitybutton"
+            android:fontFamily="monospace"
+            android:padding="10dip"
+            android:text=" Depict! "
+            android:textAllCaps="false"
+            android:textColor="@color/black_alpha"
+            android:textSize="25sp" />
+
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:background="#FFFFFF"
-            android:orientation="vertical"
-            android:padding="30dip">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="5dip"
+            android:visibility="invisible">
 
-            <Button
-                android:id="@+id/btnColor"
-                style="@android:style/Widget.DeviceDefault.Button.Borderless"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="@color/activitybutton"
-                android:fontFamily="monospace"
-                android:padding="10dip"
-                android:text=" Depict! "
-                android:textAllCaps="false"
-                android:textColor="@color/black_alpha"
-                android:textSize="25sp" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="5dip"
-                android:visibility="invisible">
-
-                <TextView
-                    android:id="@+id/txv_sensorTxt"
-                    android:layout_width="117dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginBottom="15dp"
-                    android:padding="5dip"
-                    android:text="RGB:"
-                    android:textColor="@color/black_alpha"
-                    android:textSize="18sp"
-                    android:typeface="monospace" />
-
-                <TextView
-                    android:id="@+id/txv_rgbValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:padding="5dip"
-                    android:text="Nothing yet!"
-                    android:textColor="@color/black_alpha"
-                    android:textSize="18sp"
-                    android:typeface="monospace" />
-            </LinearLayout>
-
-            <Switch
-                android:id="@+id/speakerSwitch"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/txv_sensorTxt"
+                android:layout_width="117dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginBottom="15dp"
                 android:padding="5dip"
-                android:text="Speaker "
+                android:text="RGB:"
                 android:textColor="@color/black_alpha"
                 android:textSize="18sp"
-                android:typeface="monospace"
-                tools:ignore="UseSwitchCompatOrMaterialXml">
+                android:typeface="monospace" />
 
-            </Switch>
+            <TextView
+                android:id="@+id/txv_rgbValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:padding="5dip"
+                android:text="Nothing yet!"
+                android:textColor="@color/black_alpha"
+                android:textSize="18sp"
+                android:typeface="monospace" />
+        </LinearLayout>
 
-        </LinearLayout>
-            -->
+        <Switch
+            android:id="@+id/speakerSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:padding="5dip"
+            android:text="Speaker "
+            android:textColor="@color/black_alpha"
+            android:textSize="18sp"
+            android:typeface="monospace"
+            tools:ignore="UseSwitchCompatOrMaterialXml">
 
-            <!--
-        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="5dip">
-            <TextView android:id="@+id/txv_lightTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="15dp" android:padding="5dip" android:text="Lux value:" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
-            <TextView android:id="@+id/txv_lightValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:padding="5dip" android:text="Nothing yet!" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
-        </LinearLayout>
-        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="5dip">
-            <TextView android:id="@+id/txv_proximityTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="15dp" android:padding="5dip" android:text="Proximity:" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
-            <TextView android:id="@+id/txv_proximityValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:padding="5dip" android:text="Nothing yet!" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
-        </LinearLayout>
+        </Switch>
+
+    </LinearLayout>
         -->
+
+        <!--
+    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="5dip">
+        <TextView android:id="@+id/txv_lightTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="15dp" android:padding="5dip" android:text="Lux value:" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
+        <TextView android:id="@+id/txv_lightValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:padding="5dip" android:text="Nothing yet!" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
+    </LinearLayout>
+    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="5dip">
+        <TextView android:id="@+id/txv_proximityTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="15dp" android:padding="5dip" android:text="Proximity:" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
+        <TextView android:id="@+id/txv_proximityValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:padding="5dip" android:text="Nothing yet!" android:textColor="@color/black_alpha" android:textSize="18sp" android:typeface="monospace"/>
+    </LinearLayout>
+    -->
     </RelativeLayout>
 </LinearLayout>
 
