--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
                 <ImageView
                     android:id="@+id/img_palette"
                     android:layout_height="60dp"
+                    android:scaleType="fitXY"
                     />
             </TableRow>
             <TableRow>
